# aoc-22

input/: day07.txt  day13.txt  day13_test.txt
python/: pyproject.toml
python/days/: day05.py  day06.py  day07.py  day08.py  day09.py  day13.py  day21.py
rust/src/days/: day02.rs
src/days/: day01.rs
