[tool.poetry]
name = "aoc22-python"
version = "0.1.0"
description = ""
authors = ["Shaun Karan <shaun.karran@polymathian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
boltons = "^21.0.0"
parse = "^1.19.0"
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
